# monitored-ioloop

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  justfile  mypy.ini  pyproject.toml
.github/workflows/: build.yaml  deployment.yaml  lint_peripherals.yaml  test.yaml  test_and_lint_package.yaml
examples/: README.md
examples/fastapi_with_prometheus/: Makefile  create_traffic.py  justfile  server.py
examples/simple_python_example/: simple_python_example.py
monitored_ioloop/: __init__.py  asyncio_profiler.py  exceptions.py  formatting_utils.py  monioted_ioloop_base.py  monitored_asyncio.py  monitored_asyncio_ioloop.py  monitored_ioloop_base.py  monitored_selector_ioloop.py  monitored_uvloop.py  monitored_uvloop_ioloop.py  monitoring.py  test.py  types.py
monitored_ioloop/helpers/: fastapi.py
stress_tests/: Makefile  justfile  locustfile.py
stress_tests/results/: README.md  monitored_asyncio.html  monitored_uvloop.html  uvloop.html  vanilla_asyncio.html
stress_tests/results/asyncio/monitored/: 1000_users_stats.csv  300_users_stats.csv  monitored_stats.csv  monitored_stats_history.csv
stress_tests/results/asyncio/vanilla/: 1000_users_stats.csv  300_users_stats.csv  vanilla_stats.csv  vanilla_stats_history.csv
stress_tests/results/uvloop/monitored/: 1000_users_stats.csv  300_users_stats.csv  monitored_stats.csv  monitored_stats_history.csv
stress_tests/results/uvloop/vanilla/: 1000_users_stats.csv  300_users_stats.csv  vanilla_stats.csv  vanilla_stats_history.csv
stress_tests/server/: server.py  server_utils.py
tests/: conftest.py  test_asyncio_profiler.py  utils.py
tests/helpers/: test_fastapi.py
