[tool.poetry]
name = "monitored_ioloop"
version = "0.0.8"
description = ""
authors = ["gnir <gnir.work@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
uvloop = { version ="^0.19.0", optional = true }

[tool.poetry.extras]
uvloop = ["uvloop"]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ipython = { version="^8.21.0", python=">=3.10" }
requests = "^2.31.0"
ipdb = "^0.13.13"

[tool.poetry.group.code_quality]
optional = true

[tool.poetry.group.code_quality.dependencies]
mypy = "^1.10.1"
ruff = "^0.5.1"
pytest = "^8.0.1"
pytest-cov = "^4.1.0"
pytest-xdist = "^3.5.0"
pytest-repeat = "^0.9.3"

[tool.poetry.group.stress_test]
optional = true

[tool.poetry.group.stress_test.dependencies]
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
click = "^8.1.7"
locust = "^2.23.1"

[tool.poetry.group.examples]
optional = true

[tool.poetry.group.examples.dependencies]
fastapi = "^0.109.2"
prometheus-client = "^0.20.0"
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
