[tool.poetry]
name = "monitored_ioloop"
version = "0.1.0"
description = ""
authors = ["gnir <gnir.work@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
prometheus-client = "^0.20.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.21.0"
ipdb = "^0.13.13"
mypy = "^1.8.0"
ruff = "^0.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
