[project]
name = "monitored_ioloop"
version = "0.0.15"
description = ""
authors = [{ name = "gnir", email = "gnir.work@gmail.com" }]
requires-python = ">=3.9"
readme = "README.md"
dependencies = ["wrapt>=1.17.2,<2"]

[project.optional-dependencies]
uvloop = ["uvloop>=0.19.0,<0.20"]
fastapi = ["fastapi>=0.115.7,<0.116"]

[dependency-groups]
dev = [
    "ipython>=8.21.0,<9 ; python_version >= '3.10'",
    "requests>=2.31.0,<3",
    "ipdb>=0.13.13,<0.14",
]
code_quality = [
    "mypy>=1.10.1,<2",
    "ruff>=0.5.1,<0.6",
    "pytest>=8.0.1,<9",
    "pytest-cov>=4.1.0,<5",
    "pytest-xdist>=3.5.0,<4",
    "pytest-repeat>=0.9.3,<0.10",
    "httpx>=0.27.0,<0.28",
]
stress_test = [
    "fastapi>=0.115.7,<0.116",
    "uvicorn>=0.27.1,<0.28",
    "click>=8.1.7,<9",
    "locust>=2.23.1,<3",
]
examples = [
    "fastapi>=0.115.7,<0.116",
    "prometheus-client>=0.20.0,<0.21",
    "httpx>=0.27.0,<0.28",
]

[tool.uv]
default-groups = [
    "dev",
    "code_quality",
    "stress_test",
    "examples",
]

[tool.hatch.build.targets.sdist]
include = [
    "monitored_ioloop",
    "monitored_ioloop/py.typed",
]

[tool.hatch.build.targets.wheel]
include = [
    "monitored_ioloop",
    "monitored_ioloop/py.typed",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
